# risc16

./: .gitignore  CMakeLists.txt  README.md
src/: control.cpp  cpu.cpp  hazardDetectionUnit.cpp  memory.cpp  pipeRegs.cpp  reg_file.cpp  signext.cpp  stageHeaders.cpp  ula.cpp
tests/: cpu_tb.cpp  memory_tb.cpp  reg_file_tb.cpp  signext_tb.cpp  ula_tb.cpp
